k8s/stockle-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: stockle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockle-postgres
  template:
    metadata:
      labels:
        app: stockle-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: stockle-postgres
  namespace: stockle
spec:
  selector:
    app: stockle-postgres
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30333
